# onenote-copilot

./: .env.example  .gitignore  .markdownlint.json  DEL_FILES.md  IMPLEMENTATION_PLAN.md  PHASE2_SUMMARY.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  PHASE5_PLAN.md  PHASE6_1_COMPLETION_REPORT.md  PHASE6_3_COMPLETION_REPORT.md  PHASE7_COMPLETION_REPORT.md  PROGRESS.md  QA_TESTING_GUIDE.md  README.md  VSCODE_TASK_RULES_IMPLEMENTATION.md  fix-auth.ps1  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/: copilot-instructions.md
data/: .gitignore
docs/: AUTH_TROUBLESHOOTING.md  INFO_COMMAND_ENHANCEMENT.md  LOGGING.md  LOGGING_IMPROVEMENTS.md  PYTEST_STARTUP_OPTIMIZATION.md  TEST_OPTIMIZATION_PHASE1_SUMMARY.md  TEST_OPTIMIZATION_PHASE2_SUMMARY.md  USER_LOGOUT.md  investigate-startup-performance.md
docs/testing/: COMPLETE_TEST_OPTIMIZATION_GUIDE.md  README.md  TEST_SUITE_BEST_PRACTICES.md  TEST_SUITE_DOCUMENTATION_INDEX.md  TEST_SUITE_PERFORMANCE_DASHBOARD.md  TEST_SUITE_TEAM_ONBOARDING.md  TEST_SUITE_TROUBLESHOOTING.md
logs/: .gitignore
prompts/: INITIAL.md  PLANNING.md  TASK.md
prompts/PRPs/: 01_Current_Implementation_Status_Review.md  02_Current_Architecture_Documentation.md  03_Enhancement_Opportunity_Identification.md  04_Web_Search_Integration.md  05_Real_World_Enhancement_Tasks.md  06_Post_Implementation_Validation.md  07_Integration_Testing_External_Services.md  08_Production_Deployment_Considerations.md  09_Indexing_Commands_Clarification.md  OneNote_Copilot_CLI.md  OneNote_Local_Cache_System.md  Semantic_Search_Enhancement.md  Semantic_Search_followup.md
prompts/PRPs/DONE/: LocalCache_IMPL_SUMMARY.md  OneNote_Local_Cache_System.md
prompts/PRPs/templates/: EXAMPLE_multi_agent_prp.md  prp_base.md
prompts/commands/: TEST_RUN_APPROACH.md  execute-prp.md  generate-prp.md  long_running_tests.md  refactor-code.md
prompts/examples/: example_chat_cli.py.md  example_msal_auth.py.md
scripts/: test-commands.ps1  validate_coverage_optimization.py  validate_performance.py  validate_phase2.py
src/: __init__.py  __main__.py  main.py
src/agents/: __init__.py  onenote_agent.py  prompts.py
src/auth/: __init__.py  microsoft_auth.py
src/cli/: __init__.py  formatting.py  interface.py
src/commands/: __init__.py  cache.py  index_content.py  logout.py
src/config/: __init__.py  logging.py  settings.py
src/models/: __init__.py  cache.py  onenote.py  responses.py
src/search/: __init__.py  content_chunker.py  embeddings.py  filter_manager.py  query_processor.py  relevance_ranker.py  search_analytics.py  search_optimization.py  search_suggestions.py  semantic_ranking.py  semantic_search.py
src/storage/: __init__.py  asset_downloader.py  bulk_indexer.py  cache_analyzer.py  cache_manager.py  content_indexer.py  directory_utils.py  embedding_cache.py  incremental_sync.py  link_resolver.py  local_search.py  markdown_converter.py  onenote_fetcher.py  performance_monitor.py  report_generator.py  storage_optimizer.py  vector_store.py
src/tools/: __init__.py  onenote_content.py  onenote_search.py
tests/: conftest.py  test_agent_basic.py  test_agent_local_search.py  test_agent_simple.py  test_asset_downloader_integration.py  test_auth.py  test_auth_file_ops.py  test_auth_simple.py  test_cache_analyzer.py  test_cache_manager.py  test_cli_formatting.py  test_cli_interface.py  test_config.py  test_content_command.py  test_content_fetcher_integration.py  test_content_integration.py  test_coverage_boost.py  test_directory_utils.py  test_incremental_sync.py  test_info_command_enhancement.py  test_link_resolver_integration.py  test_local_search_integration.py  test_logging.py  test_main.py  test_main_module.py  test_markdown_converter_integration.py  test_models_onenote.py  test_models_responses.py  test_onenote_agent.py  test_onenote_agent_additional.py  test_performance_monitor.py  test_phase2_modules.py  test_phase2_simple.py  test_report_generator.py  test_search_analytics.py  test_search_optimization.py  test_search_suggestions.py  test_semantic_ranking.py  test_semantic_ranking_basic.py  test_semantic_ranking_fixed.py  (+5 more)
